--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+hr,.hr {
+  width: 100%;
+  height: 1px;
+  background-color: red;
+  border-color: red;
+}
